[tool.poetry]
name = "tap-cj"
version = "0.0.1"
description = "`tap-cj` is a Singer tap for cj, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Hunter Kuffel"]
keywords = [
    "ELT",
    "cj",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.28.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.28.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_cj"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_cj"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cj = 'tap_cj.tap:Tapcj.cli'
